feat: publish memlayer-core library JAR to Clojars
- Split deps.edn: core library deps in base, server deps in :server alias
- Exclude CLJS transitive deps from proximum/datahike (38MB → 12MB)
- Add jar/install/deploy tasks to build.clj and bb.edn
- Add :deploy alias with deps-deploy for Clojars publishing
- Add Clojars deploy step to release GitHub Actions workflow
- Rewrite README library section with system init guide and all operations

Fixes MEM-95